fix color contrast of doubleTapHint

--- a/css/colors.css
+++ b/css/colors.css
@@ -43,7 +43,7 @@
 
     --body-bg: light-dark(var(--gray-95), var(--gray-10));
     --double-tap-hint: light-dark(var(--gray-05), var(--gray-95));
-    --double-tap-hint-bg: light-dark(var(--blue-30), var(--blue-60));
+    --double-tap-hint-bg: light-dark(var(--blue-70), var(--blue-30));
     --btn: light-dark(var(--gray-95), var(--gray-05));
     --btn-bg: light-dark(var(--blue-50), var(--blue-70));
     --btn-hover-bg: color-mix(in srgb, var(--btn-bg) 80%, var(--brightness));
